[gd_scene load_steps=6 format=3 uid="uid://c01h46ht3earx"]

[ext_resource type="Script" path="res://src/hud/hud.gd" id="1_4w35r"]
[ext_resource type="PackedScene" uid="uid://b85f5iqoqvjru" path="res://src/hud/upgrade.tscn" id="2_0q26h"]
[ext_resource type="PackedScene" uid="uid://daxdd6604yf0v" path="res://src/hearts_container/hearts_container.tscn" id="3_n5luf"]

[sub_resource type="LabelSettings" id="LabelSettings_nd2vw"]
font_size = 42
font_color = Color(0.171145, 0.595917, 0.39702, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8jl4s"]
font_size = 62
font_color = Color(0.890196, 0.109804, 0.152941, 1)

[node name="HUD" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_4w35r")

[node name="LighthouseHpLabel" type="Label" parent="."]
offset_left = 552.0
offset_right = 626.0
offset_bottom = 23.0
text = "HP: 10/10"

[node name="ExpLabel" type="Label" parent="."]
offset_left = 1056.0
offset_right = 1152.0
offset_bottom = 24.0
text = "0/600"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_top = 24.0
offset_bottom = 48.0
grow_horizontal = 0
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CrashesLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_top = 48.0
offset_right = -1.0
offset_bottom = 71.0
grow_horizontal = 0
text = "Lost ships: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Navigation debug mode"

[node name="ShipTimeoutLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -48.0
offset_right = -3.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
text = "Ship timeout: 1s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.5
offset_top = -23.0
offset_right = 62.5
grow_horizontal = 2
grow_vertical = 0
text = "Wave: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeSelection" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -176.0
offset_right = 468.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="UpgradeLabel" type="Label" parent="UpgradeSelection"]
layout_mode = 2
text = "Choose an upgrade"
label_settings = SubResource("LabelSettings_nd2vw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrades" type="GridContainer" parent="UpgradeSelection"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 2

[node name="Upgrade1" parent="UpgradeSelection/Upgrades" instance=ExtResource("2_0q26h")]
layout_mode = 2

[node name="Upgrade2" parent="UpgradeSelection/Upgrades" instance=ExtResource("2_0q26h")]
layout_mode = 2

[node name="Upgrade3" parent="UpgradeSelection/Upgrades" instance=ExtResource("2_0q26h")]
layout_mode = 2

[node name="Upgrade4" parent="UpgradeSelection/Upgrades" instance=ExtResource("2_0q26h")]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = -43.0
offset_right = 168.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_8jl4s")

[node name="NewGameButton" type="Button" parent="GameOverLabel"]
layout_mode = 0
offset_left = 80.0
offset_top = 86.0
offset_right = 256.0
offset_bottom = 117.0
text = "New game"

[node name="HeartsContainer" parent="." instance=ExtResource("3_n5luf")]
scale = Vector2(3, 3)

[connection signal="upgrade_clicked" from="UpgradeSelection/Upgrades/Upgrade1" to="." method="_on_upgrade_option_1_button_up"]
[connection signal="upgrade_clicked" from="UpgradeSelection/Upgrades/Upgrade2" to="." method="_on_upgrade_option_2_button_up"]
[connection signal="upgrade_clicked" from="UpgradeSelection/Upgrades/Upgrade3" to="." method="_on_upgrade_option_3_button_up"]
[connection signal="upgrade_clicked" from="UpgradeSelection/Upgrades/Upgrade4" to="." method="_on_upgrade_option_4_button_up"]
[connection signal="button_up" from="GameOverLabel/NewGameButton" to="." method="_on_new_game_button_button_up"]
